[package]
name = "chill-client"
version = "0.1.0"
edition = "2021"

[dependencies]
chill-api = {path = "../chill-rs-api"}
mpl-token-metadata = { version = "1.2.4", features = ["no-entrypoint"] }
solana-client = "1.9.5"
solana-sdk = "1.9.5"
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
thiserror = "1.0.30"
