[package]
name = "chill-api"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.9.3"
mpl-token-metadata = { version = "1.2.3", features = ["no-entrypoint"] }
num-derive = "0.3.3"
num-traits = "0.2.14"
solana-program = "1.9.5"
spl-token = "3.2.0"
thiserror = "1.0.30"

[dev-dependencies]
solana-sdk = "1.9.5"

[lib]
crate-type = ["cdylib", "lib"]

