[package]
name = "chill-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
chill-nft = {path = "../programs/nft", features = ["no-entrypoint"]}
clap = "2.34"
colored = "2.0.0"
dirs = "4.0.0"
mpl-token-metadata = "1.1.*"
solana-clap-utils = "=1.8.14"
solana-client = "=1.8.14"
solana-sdk = "=1.8.14"
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
thiserror = "1.0.30"

[dev-dependencies]
rand = "0.8.5"
