[package]
name = "chill-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.24.2"
anchor-spl = "0.24.2"
anyhow = "1.0.53"
chill-nft = {path = "../programs/nft", features = ["no-entrypoint"]}
chill-wallet = {path = "../programs/wallet", features = ["no-entrypoint"]}
chill-staking = {path = "../programs/staking", features = ["no-entrypoint"]}
clap = "2.34"
colored = "2.0.0"
dirs = "4.0.0"
lazy_static = "1.4.0"
mpl-token-metadata = "1.2.7"
solana-clap-utils = "1.9.15"
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
spl-token = "3.2.0"
thiserror = "1.0.30"

[dev-dependencies]
rand = "0.8.5"
