[package]
name = "platform-service-blockchain"
version = "0.1.0"
edition = "2021"


[[bin]] # Bin to run the gRPC server
name = "service-blockchain-server"
path = "src/server.rs"


[dependencies]
tonic = "0.4.2" # Rust gRPC implementation
prost = "0.7.0" # Rust Protocol Buffers implementation
prost-types = "0.7.0" # Contains definitions of Protocol Buffers well-known types
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chill-cli = { path = "../cli" }

[build-dependencies]
tonic-build = "0.4.2"