[package]
name = "chill-nft"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
num-derive = "0.3.3"
num-traits = "0.2.14"
solana-program = "1.9.5"
thiserror = "1.0.30"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.2.4", features = ["no-entrypoint"] }

[dev-dependencies]
lazy_static = "1.4.0"
rand = "0.8.4"
solana-client = "1.9.5"
solana-sdk = "1.9.5"
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}

[lib]
crate-type = ["cdylib", "lib"]
