[package]
name = "chill-nft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chill_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
borsh = "0.9.3"
mpl-token-metadata = { version = "1.2.6", features = ["no-entrypoint"] }
spl-token = "3.2.0"
